#787: Move dataverse UI

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2645,9 +2645,9 @@ dashboard.datamove.confirm.dialog=Czy na pewno chcesz przenie\u015B\u0107 ten zb
 dashboard.datamove.confirm.yes=Tak, przenie\u015B zbi\u00F3r danych
 dashboard.datamove.confirm.no=Nie, anuluj
 dashboard.datamove.confirm.force=Wymu\u015B przeniesienie
-dashboard.datamove.message.success=Zbi\u00F3r danych "{0}" ({1}) zosta\u0142 pomy\u015Blnie przeniesiony do kolekcji "{2}".
-dashboard.datamove.message.failure.summary=Przeniesienie zbioru danych nie powiod\u0142o si\u0119.
-dashboard.datamove.message.failure.details=Zbi\u00F3r danych "{0}" ({1}) nie m\u00F3g\u0142 zosta\u0107 przeniesiony do kolekcji "{2}". <br>{3}<br>{4}<br>
+dashboard.datamove.dataset.message.success=Zbi\u00F3r danych "{0}" ({1}) zosta\u0142 pomy\u015Blnie przeniesiony do kolekcji "{2}".
+dashboard.datamove.dataset.message.failure.summary=Przeniesienie zbioru danych nie powiod\u0142o si\u0119.
+dashboard.datamove.dataset.message.failure.details=Zbi\u00F3r danych "{0}" ({1}) nie m\u00F3g\u0142 zosta\u0107 przeniesiony do kolekcji "{2}". <br>{3}<br>{4}<br>
 dashboard.datamove.dataverse.placeholder=Wprowad\u017A identyfikator kolekcji...
 dashboard.datamove.dataset.placeholder=Wprowad\u017A trwa\u0142y identyfikator zbioru danych: doi:..., hdl:...
 dashboard.datamove.dataset.menu.header=Trwa\u0142y identyfikator zbioru danych, Tytu\u0142, Identyfikator kolekcji nadrz\u0119dnej
@@ -2665,3 +2665,23 @@ dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=Je
 dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=Ten zbi\u00F3r danych jest przypi\u0119ty do nowej kolekcji nadrz\u0119dnej lub kt\u00F3rej\u015B z kolekcji wy\u017Cszego rz\u0119du. Przeniesienie zbioru danych spowoduje jego odpi\u0119cie.
 dashboard.datamove.dataset.command.error.indexingProblem=Zbi\u00F3r danych nie m\u00F3g\u0142 zosta\u0107 przeniesiony. Indeksowanie nie powiod\u0142o si\u0119.
 dashboard.datamove.dataset.command.suggestForce=Mo\u017Cesz wymusi\u0107 to polecenie zaznaczaj\u0105c opcj\u0119 "Wymu\u015B przeniesienie".
+dashboard.datamove.tab.dataset.move=TODO_1 (Move dataset)
+dashboard.datamove.tab.dataverse.move=TODO_2 (Mover dataverse)
+dashboard.datamove.selectdataverse.header=TODO_3 (Dataverse to move)
+dashboard.datamove.dataverse.button.move=TODO_4 (Move dataverse)
+dashboard.datamove.dataverse.confirm.dialog=TODO_5 (Are you sure you want to move this dataverse?)
+dashboard.datamove.dataverse.confirm.yes=TODO_6 (Yes, Move Dataverse)
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=trying.to.move.into.descendant.dataverse
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.itself=trying.to.move.into.itself
+dahsboard.datamove.dataverse.command.error.already.in.dataverse=already.in.dataverse
+dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=unpublished.target.dataverse
+dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=dataset.guestbook.not.in.target.dataverse
+dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=dataverse.template.not.in.target.dataverse
+dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=dataverse.featured.in.current.dataverse
+dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=dataverse.metadata.block.not.in.target.dataverse
+dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=dataverse.linked.to.target.dataverse
+dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=dataset.linked.to.target.dataverse
+dashboard.datamove.dataverse.command.suggestForce=Mo\u017Cesz wymusi\u0107 to polecenie zaznaczaj\u0105c opcj\u0119 "Wymu\u015B przeniesienie".
+dashboard.datamove.dataverse.message.success=The dataverse "{0}" has been successfully moved to "{1}" dataverse.
+dashboard.datamove.dataverse.message.failure.summary=Failed to move dataverse.
+dashboard.datamove.dataverse.message.failure.details=The dataverse "{0}" could not be moved to "{1}" dataverse.<br>{2}<br>{3}<br>
