--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2678,9 +2678,9 @@ dashboard.datamove.dataverse.label=Dataverse
 dashboard.datamove.confirm.dialog=Are you sure you want to move this dataset?
 dashboard.datamove.confirm.yes=Yes, Move Dataset
 dashboard.datamove.confirm.force=Force Move
-dashboard.datamove.message.success=The dataset "{0}" ({1}) has been successfully moved to "{2}" dataverse.
-dashboard.datamove.message.failure.summary=Failed to move dataset.
-dashboard.datamove.message.failure.details=The dataset "{0}" ({1}) could not be moved to "{2}" dataverse.<br>{3}<br>{4}<br>
+dashboard.datamove.dataset.message.success=The dataset "{0}" ({1}) has been successfully moved to "{2}" dataverse.
+dashboard.datamove.dataset.message.failure.summary=Failed to move dataset.
+dashboard.datamove.dataset.message.failure.details=The dataset "{0}" ({1}) could not be moved to "{2}" dataverse.<br>{3}<br>{4}<br>
 dashboard.datamove.dataverse.placeholder=Enter Dataverse Identifier...
 dashboard.datamove.dataset.placeholder=Enter Dataset Persistent ID: doi:..., hdl:...
 dashboard.datamove.dataset.menu.header=Dataset Persistent ID, Title, Host Dataverse Identifier
@@ -2700,3 +2700,23 @@ dashboard.datamove.dataset.command.error.indexingProblem=Dataset could not be mo
 dashboard.datamove.dataset.command.suggestForce=You can force this command by selecting "Force Move" checkbox.
 dashboard.datamove.confirm.no=No, Cancel
 dashboard.datamove.button.move=Move Dataset
+dashboard.datamove.tab.dataset.move=TODO_1 (Move dataset)
+dashboard.datamove.tab.dataverse.move=TODO_2 (Move dataverse)
+dashboard.datamove.selectdataverse.header=TODO_3 (Dataverse to move)
+dashboard.datamove.dataverse.button.move=TODO_4 (Move dataverse)
+dashboard.datamove.dataverse.confirm.dialog=TODO_5 (Are you sure you want to move this dataverse?)
+dashboard.datamove.dataverse.confirm.yes=TODO_6 (Yes, Move Dataverse)
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=Can't move a dataverse to its descendant.
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.itself=Cannot move a dataverse into itself.
+dahsboard.datamove.dataverse.command.error.already.in.dataverse=Dataverse already in this dataverse.
+dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=Published dataverse may not be moved to unpublished dataverse. You may publish "{0}" and re-try the move.
+dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=Dataset guestbook is not in target dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=Dataverse template is not in target dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=Dataverse is featured in current dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=Dataverse metadata block is not in target dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=Dataverse is linked to target dataverse or one of its parents.
+dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=Dataset is linked to target dataverse or one of its parents.
+dashboard.datamove.dataverse.command.suggestForce=You can force this command by selecting "Force Move" checkbox.
+dashboard.datamove.dataverse.message.success=The dataverse "{0}" has been successfully moved to "{1}" dataverse.
+dashboard.datamove.dataverse.message.failure.summary=Failed to move dataverse.
+dashboard.datamove.dataverse.message.failure.details=The dataverse "{0}" could not be moved to "{1}" dataverse.<br>{2}<br>{3}<br>
