--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2692,7 +2692,7 @@ dashboard.datamove.dataverse.autocomplete.name=Dataverse Name (Affiliation)
 dashboard.datamove.dataverse.autocomplete.identifier=Identifier
 dashboard.datamove.dataset.menu.invalidMsg=No matching datasets found.
 dashboard.datamove.dataverse.menu.invalidMsg=No matching dataverses found.
-dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=A published dataset may not be moved to an unpublished dataverse. You can retry the move after publishing "{0}" dataverse.
+dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=A published dataset cannot be moved to an unpublished dataverse. You can retry the move after publishing the new host dataverse.
 dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=This dataset is already in this dataverse.
 dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=If you move this dataset, the guestbook would be removed from it because the guestbook is not in the new host dataverse.
 dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=This dataset is linked to the new host dataverse or one of its parents. This move would remove the link to this dataset.
@@ -2700,22 +2700,22 @@ dashboard.datamove.dataset.command.error.indexingProblem=Dataset could not be mo
 dashboard.datamove.dataset.command.suggestForce=You can force this command by selecting "Force Move" checkbox.
 dashboard.datamove.confirm.no=No, Cancel
 dashboard.datamove.button.move=Move Dataset
-dashboard.datamove.tab.dataset.move=TODO_1 (Move dataset)
-dashboard.datamove.tab.dataverse.move=TODO_2 (Move dataverse)
-dashboard.datamove.selectdataverse.header=TODO_3 (Dataverse to move)
-dashboard.datamove.dataverse.button.move=TODO_4 (Move dataverse)
-dashboard.datamove.dataverse.confirm.dialog=TODO_5 (Are you sure you want to move this dataverse?)
-dashboard.datamove.dataverse.confirm.yes=TODO_6 (Yes, Move Dataverse)
-dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=Can't move a dataverse to its descendant.
+dashboard.datamove.tab.dataset.move=Move Dataset
+dashboard.datamove.tab.dataverse.move=Move Dataverse
+dashboard.datamove.selectdataverse.header=Dataverse to Move
+dashboard.datamove.dataverse.button.move=Move Dataverse
+dashboard.datamove.dataverse.confirm.dialog=Are you sure you want to move this dataverse?
+dashboard.datamove.dataverse.confirm.yes=Yes, Move Dataverse
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=Cannot move a dataverse into its descendant.
 dahsboard.datamove.dataverse.command.error.trying.to.move.into.itself=Cannot move a dataverse into itself.
-dahsboard.datamove.dataverse.command.error.already.in.dataverse=Dataverse already in this dataverse.
-dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=Published dataverse may not be moved to unpublished dataverse. You may publish "{0}" and re-try the move.
-dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=Dataset guestbook is not in target dataverse.
-dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=Dataverse template is not in target dataverse.
-dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=Dataverse is featured in current dataverse.
-dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=Dataverse metadata block is not in target dataverse.
-dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=Dataverse is linked to target dataverse or one of its parents.
-dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=Dataset is linked to target dataverse or one of its parents.
+dahsboard.datamove.dataverse.command.error.already.in.dataverse=The dataverse is already in the dataverse you are trying to move it into.
+dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=A published dataverse cannot be moved to an unpublished dataverse. You can retry the move after publishing the new host dataverse.
+dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=Dataset guestbook is not in the new host dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=Dataset template is not in the new host dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=The dataverse you are trying to move is featured in its current host dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=Metadata block in the dataverse you are trying to move is not in the new host dataverse.
+dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=The dataverse you are trying to move is linked to the new host dataverse or one of its parents.
+dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=A dataset in the dataverse you are trying to move is linked to the new host dataverse or one of its parents.
 dashboard.datamove.dataverse.command.suggestForce=You can force this command by selecting "Force Move" checkbox.
 dashboard.datamove.dataverse.message.success=The dataverse "{0}" has been successfully moved to "{1}" dataverse.
 dashboard.datamove.dataverse.message.failure.summary=Failed to move dataverse.
