--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2659,29 +2659,29 @@ dashboard.datamove.dataverse.autocomplete.name=Nazwa kolekcji (Afiliacja)
 dashboard.datamove.dataverse.autocomplete.identifier=Identyfikator
 dashboard.datamove.dataset.menu.invalidMsg=Nie znaleziono pasuj\u0105cych zbior\u00F3w danych.
 dashboard.datamove.dataverse.menu.invalidMsg=Nie znaleziono pasuj\u0105cych kolekcji.
-dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=Opublikowany zbi\u00F3r danych nie mo\u017Ce zosta\u0107 przeniesiony do nieopublikowanej kolekcji. Mo\u017Cesz spr\u00F3bowa\u0107 przenie\u015B\u0107 go ponownie po opublikowaniu kolekcji "{0}".
+dashboard.datamove.dataset.command.error.targetDataverseUnpublishedDatasetPublished=Opublikowany zbi\u00F3r danych nie mo\u017Ce zosta\u0107 przeniesiony do kolekcji, kt\u00F3ra nie zosta\u0142a opublikowana. Mo\u017Cesz spr\u00F3bowa\u0107 przenie\u015B\u0107 go ponownie po opublikowaniu nowej kolekcji nadrz\u0119dnej.
 dashboard.datamove.dataset.command.error.targetDataverseSameAsOriginalDataverse=Ten zbi\u00F3r danych znajduje si\u0119 ju\u017C w tej kolekcji.
 dashboard.datamove.dataset.command.error.datasetGuestbookNotInTargetDataverse=Je\u015Bli przeniesiesz ten zbi\u00F3r danych, ksi\u0119ga go\u015Bci zostanie z niego usuni\u0119ta, poniewa\u017C nie znajduje si\u0119 ona w nowej kolekcji nadrz\u0119dnej.
 dashboard.datamove.dataset.command.error.linkedToTargetDataverseOrOneOfItsParents=Ten zbi\u00F3r danych jest przypi\u0119ty do nowej kolekcji nadrz\u0119dnej lub kt\u00F3rej\u015B z kolekcji wy\u017Cszego rz\u0119du. Przeniesienie zbioru danych spowoduje jego odpi\u0119cie.
 dashboard.datamove.dataset.command.error.indexingProblem=Zbi\u00F3r danych nie m\u00F3g\u0142 zosta\u0107 przeniesiony. Indeksowanie nie powiod\u0142o si\u0119.
 dashboard.datamove.dataset.command.suggestForce=Mo\u017Cesz wymusi\u0107 to polecenie zaznaczaj\u0105c opcj\u0119 "Wymu\u015B przeniesienie".
-dashboard.datamove.tab.dataset.move=TODO_1 (Move dataset)
-dashboard.datamove.tab.dataverse.move=TODO_2 (Mover dataverse)
-dashboard.datamove.selectdataverse.header=TODO_3 (Dataverse to move)
-dashboard.datamove.dataverse.button.move=TODO_4 (Move dataverse)
-dashboard.datamove.dataverse.confirm.dialog=TODO_5 (Are you sure you want to move this dataverse?)
-dashboard.datamove.dataverse.confirm.yes=TODO_6 (Yes, Move Dataverse)
-dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=trying.to.move.into.descendant.dataverse
-dahsboard.datamove.dataverse.command.error.trying.to.move.into.itself=trying.to.move.into.itself
-dahsboard.datamove.dataverse.command.error.already.in.dataverse=already.in.dataverse
-dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=unpublished.target.dataverse
-dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=dataset.guestbook.not.in.target.dataverse
-dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=dataverse.template.not.in.target.dataverse
-dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=dataverse.featured.in.current.dataverse
-dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=dataverse.metadata.block.not.in.target.dataverse
-dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=dataverse.linked.to.target.dataverse
-dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=dataset.linked.to.target.dataverse
+dashboard.datamove.tab.dataset.move=Przenie\u015B zbi\u00F3r danych
+dashboard.datamove.tab.dataverse.move=Przenie\u015B kolekcj\u0119
+dashboard.datamove.selectdataverse.header=Przenoszona kolekcja
+dashboard.datamove.dataverse.button.move=Przenie\u015B kolekcj\u0119
+dashboard.datamove.dataverse.confirm.dialog=Czy na pewno chcesz przenie\u015B\u0107 t\u0119 kolekcj\u0119?
+dashboard.datamove.dataverse.confirm.yes=Tak, przenie\u015B kolekcj\u0119
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.descendant.dataverse=Nie mo\u017Cna przenie\u015B\u0107 kolekcji do jej kolekcji podrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.trying.to.move.into.itself=Nie mo\u017Cna przenie\u015B\u0107 kolekcji do niej samej.
+dahsboard.datamove.dataverse.command.error.already.in.dataverse=Kolekcja znajduje si\u0119 ju\u017C w kolekcji, do kt\u00F3rej pr\u00F3bujesz j\u0105 przenie\u015B\u0107.
+dahsboard.datamove.dataverse.command.error.unpublished.target.dataverse=Opublikowanej kolekcji nie mo\u017Cna przenie\u015B\u0107 do kolekcji, kt\u00F3ra nie zosta\u0142a opublikowana. Mo\u017Cesz ponowi\u0107 pr\u00F3b\u0119 przeniesienia po opublikowaniu nowej kolekcji nadrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.dataset.guestbook.not.in.target.dataverse=Brak ksi\u0119gi go\u015Bci zbioru danych w nowej kolekcji nadrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.dataverse.template.not.in.target.dataverse=Brak szablonu zbioru danych w nowej kolekcji nadrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.dataverse.featured.in.current.dataverse=Kolekcja, kt\u00F3r\u0105 pr\u00F3bujesz przenie\u015B\u0107 jest wyr\u00F3\u017Cniona w swojej aktualnej kolekcji nadrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.dataverse.metadata.block.not.in.target.dataverse=Blok metadanych w kolekcji, kt\u00F3r\u0105 pr\u00F3bujesz przenie\u015B\u0107 nie jest obecny w nowej kolekcji nadrz\u0119dnej.
+dahsboard.datamove.dataverse.command.error.dataverse.linked.to.target.dataverse=Kolekcja, kt\u00F3r\u0105 pr\u00F3bujesz przenie\u015B\u0107 jest przypi\u0119ta do nowej kolekcji nadrz\u0119dnej lub kt\u00F3rej\u015B z jej kolekcji wy\u017Cszego rz\u0119du.
+dahsboard.datamove.dataverse.command.error.dataset.linked.to.target.dataverse=Zbi\u00F3r danych w kolekcji, kt\u00F3r\u0105 pr\u00F3bujesz przenie\u015B\u0107 jest przypi\u0119ty do nowej kolekcji narz\u0119dnej lub kt\u00F3rej\u015B z jej jej kolekcji wy\u017Cszego rz\u0119du.
 dashboard.datamove.dataverse.command.suggestForce=Mo\u017Cesz wymusi\u0107 to polecenie zaznaczaj\u0105c opcj\u0119 "Wymu\u015B przeniesienie".
-dashboard.datamove.dataverse.message.success=The dataverse "{0}" has been successfully moved to "{1}" dataverse.
-dashboard.datamove.dataverse.message.failure.summary=Failed to move dataverse.
-dashboard.datamove.dataverse.message.failure.details=The dataverse "{0}" could not be moved to "{1}" dataverse.<br>{2}<br>{3}<br>
+dashboard.datamove.dataverse.message.success=Kolekcja "{0}" zosta\u0142a pomy\u015Blnie przeniesiona do kolekcji "{1}".
+dashboard.datamove.dataverse.message.failure.summary=Przeniesienie kolekcji nie powiod\u0142o si\u0119.
+dashboard.datamove.dataverse.message.failure.details=Kolekcja "{0}" nie mog\u0142a zosta\u0107 przeniesiona do kolekcji "{1}".<br>{2}<br>{3}<br>
