Closes #844: Sub Sup indexes in metadata fields

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -36,7 +36,7 @@ continue=Continue
 name=Name
 institution=Institution
 position=Position
-affiliation=Affiliation
+affiliation=Affi<sub>liat</sub>ion
 createDataverse=Create Dataverse
 remove=Remove
 done=Done
