--- a/dataverse-webapp/src/main/resources/citation_en.properties
+++ b/dataverse-webapp/src/main/resources/citation_en.properties
@@ -12,8 +12,8 @@ datasetfieldtype.otherIdValue.withParent.title=Other ID - Identifier
 datasetfieldtype.author.title=Author
 datasetfieldtype.authorName.title=Name
 datasetfieldtype.authorName.withParent.title=Author Name
-datasetfieldtype.authorAffiliation.title=Affi<sub>lia</sub>tion
-datasetfieldtype.authorAffiliation.withParent.title=Author Aff<sub>ilia</sub><sup>tio</sup>n
+datasetfieldtype.authorAffiliation.title=Affiliation
+datasetfieldtype.authorAffiliation.withParent.title=Author Affiliation
 datasetfieldtype.authorIdentifierScheme.title=Identifier Scheme
 datasetfieldtype.authorIdentifierScheme.withParent.title=Author Identifier Scheme
 datasetfieldtype.authorIdentifier.title=Identifier
