Closes #862: fixed bundle

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2402,7 +2402,7 @@ datasets.api.add.termsOfUseAndAccess.allRightsReservedTerms.invalidRemainingPara
 datasets.api.add.termsOfUseAndAccess.restrictedTerms.missingAccessConditions={0} requires accessConditions parameter.
 datasets.api.add.termsOfUseAndAccess.restrictedTerms.invalidLicenseParameter={0} terms doesn't allow license parameter.
 datasets.api.add.termsOfUseAndAccess.restrictedTerms.invalidAccessConditions={0} is not a valid accessConditions parameter value.
-datasets.api.add.termsOfUseAndAccess.restrictedTerms.missingAccessConditionsCustomText=For restrictType: " {0} you must specify accessConditionsCustomText parameter.
+datasets.api.add.termsOfUseAndAccess.restrictedTerms.missingAccessConditionsCustomText=For restrictType: {0} you must specify accessConditionsCustomText parameter.
 datasets.api.add.termsOfUseAndAccess.restrictedTerms.invalidRemainingParameters=accessConditions is the only required parameter for {0} restriction reason.
 
 #Dataverses.java
