--- a/dataverse-webapp/src/main/resources/citation_en.properties
+++ b/dataverse-webapp/src/main/resources/citation_en.properties
@@ -516,3 +516,5 @@ controlledvocabulary.language.yoruba=Yoruba
 controlledvocabulary.language.zhuang,_chuang=Zhuang, Chuang
 controlledvocabulary.language.zulu=Zulu
 controlledvocabulary.language.not_applicable=Not applicable
+controlledvocabulary.language.popular=Popular languages
+controlledvocabulary.language.not_popular=Other languages
