#921: Add importer form.

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2747,6 +2747,14 @@ dashboard.datamove.dataverse.command.suggestForce=You can force this command by 
 dashboard.datamove.dataverse.message.success=The dataverse "{0}" has been successfully moved to "{1}" dataverse.
 dashboard.datamove.dataverse.message.failure.summary=Failed to move dataverse.
 dashboard.datamove.dataverse.message.failure.details=The dataverse "{0}" could not be moved to "{1}" dataverse.<br>{2}<br>{3}<br>
+
 metadata.import.panel.title=Metadata import
 metadata.import.panel.importer.label=Importer
 metadata.import.panel.import.button=Import
+metadata.import.processing.type.fill.if.empty=Fill if empty
+metadata.import.processing.type.overwrite=Overwrite
+metadata.import.processing.type.multiple.overwrite=Overwrite
+metadata.import.processing.type.create.new=Create new field
+metadata.import.result.not.matched=Cannot match field name with dataset metadata. The value will be omitted.
+
+file.upload.temp.file.button=Select temporary file
