--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2704,3 +2704,9 @@ dashboard.datamove.dataverse.message.failure.details=Kolekcja "{0}" nie mog\u014
 metadata.import.panel.title=Import metadanych
 metadata.import.panel.importer.label=Importer
 metadata.import.panel.import.button=Importuj
+file.upload.temp.file.button=Wybierz plik tymczasowy
+metadata.import.processing.type.fill.if.empty=Uzupe\u0142nij jesli puste
+metadata.import.processing.type.overwrite=Nadpisz
+metadata.import.processing.type.multiple.overwrite=Nadpisz
+metadata.import.processing.type.create.new=Utw\u00F3rz nowe pole
+metadata.import.result.not.matched=Nie znaleziono odpowiadaj\u0105cego pola metadanych. Warto\u015B\u0107 zostanie pomini\u0119ta.
