--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2751,6 +2751,8 @@ dashboard.datamove.dataverse.message.failure.details=The dataverse "{0}" could n
 metadata.import.panel.title=Metadata import
 metadata.import.panel.importer.label=Importer
 metadata.import.panel.import.button=Import
+metadata.import.form.empty.field=This field has to be filled.
+metadata.import.form.empty.file=File has to be uploaded before proceeding.
 metadata.import.processing.type.fill.if.empty=Fill if empty
 metadata.import.processing.type.overwrite=Overwrite
 metadata.import.processing.type.multiple.overwrite=Overwrite
