--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2710,3 +2710,5 @@ metadata.import.processing.type.overwrite=Nadpisz
 metadata.import.processing.type.multiple.overwrite=Nadpisz
 metadata.import.processing.type.create.new=Utw\u00F3rz nowe pole
 metadata.import.result.not.matched=Nie znaleziono odpowiadaj\u0105cego pola metadanych. Warto\u015B\u0107 zostanie pomini\u0119ta.
+metadata.import.form.empty.field=Pole musi by\u0107 wype\u0142nione.
+metadata.import.form.empty.file=Nale\u017Cy wgra\u0107 plik przed przej\u015Bciem dalej.
