added additional table for Ingest Raport, report refactorign WIP.

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2066,6 +2066,15 @@ ingest.csv.invalidHeader=Invalid header row. One of the cells is empty.
 ingest.csv.lineMismatch=Mismatch between line counts in first and final passes!, {0} found on first pass, but {1} found on second.
 ingest.csv.recordMismatch=Reading mismatch, line {0} of the Data file: {1} delimited values expected, {2} found.
 ingest.csv.nullStream=Stream can't be null.
+ingest.noPlugin=No ingest plugin found for file type {0}
+ingest.pluginRawFiles=this plugin does not support external raw data files.
+ingest.ioException=IO Exception occured while trying to open the file for reading.
+ingest.statsOrSignaturesFailure=Ingest failed to produce Summary Statistics and/or UNF signatures; {0}
+ingest.dbFail=Failed to save the tabular file produced by the ingest.
+ingest.dbFailWithTabProduced=Ingest produced tabular data, but failed to save it in the database; {0} No further information is available.
+ingest.wrongHeader=reading failure: wrong headerId(Z) here
+ingest.unknownException=Unknown exception occured during ingest;
+
 
 # editdatafile.xhtml
 
