--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2045,6 +2045,13 @@ ingest.csv.invalidHeader=Niepoprawny wiersz nag\u0142\u00F3wka. Jedna z kom\u00F
 ingest.csv.lineMismatch=Niezgodno\u015B\u0107 liczby linii odnalezionych w pierwszym i ostatnim przebiegu. W pierwszym przebiegu odnaleziono {0} linii, a w ostatnim {1}.
 ingest.csv.recordMismatch=B\u0142\u0105d odczytu linii {0} w pliku danych: oczekiwano {1} oddzielonych warto\u015Bci, odnaleziono {2}.
 ingest.csv.nullStream=Strumie\u0144 nie mo\u017Ce by\u0107 nullem.
+ingest.pluginRawFiles=ten plugin nie obs\u0142uguje nieprzetworzone pliki danych.
+ingest.noPlugin=Nie znaleziono pluginu do ingestowana dla typu pliku {0}
+ingest.ioException=Wyst\u0105pi\u0142 b\u0142\u0105d wczytywania pliku podczas jego odczytu.
+ingest.statsOrSignaturesFailure=Analiza pliku nie by\u0142a w stanie stworzy\u0107 statystyk podsumowana lub/i sygnatur UNF; {0}
+ingest.dbFail=Nie uda\u0142o si\u0119 zapisa\u0107 pliku tabularycznego wyprodukowanego przez analiz\u0119.
+ingest.dbFailWithTabProduced=Analiza powiod\u0142a si\u0119, ale podczas zapisu do bazy danych wyst\u0105pi\u0142 b\u0142\u0105d; {0} Brak wi\u0119cej informacji.
+ingest.wrongHeader=b\u0142\u0105d czytania pliku: niepoprawny id nag\u0142\u00F3wka (Z)
 
 # editdatafile.xhtml
 
