fixed error messages for ingested files.

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2589,6 +2589,7 @@ dataretrieverAPI.noMsgResultsFound=Przepraszamy, nie znaleziono \u017Cadnych wyn
 
 #xlsxfilereader.java
 xlsxfilereader.ioexception.parse=Nie uda\u0142o si\u0119 przeprowadzi\u0107 analizy arkuszy Excel/XLSX ,{0}
+xlsxfilereader.ioexception.numericParse=Nie uda\u0142o si\u0119 odczyta\u0107 warto\u015Bci numerycznej po pierwszej pr\u00F3bie! kolumna: {0}, wartos\u0107: {1}
 xlsxfilereader.ioexception.norows=Nie znaleziono \u017Cadnych wierszy z danymi w pliku Excel (XLSX).
 xlsxfilereader.ioexception.onlyonerow=Wykryto tylko jeden wiersz z danymi (nag\u0142\u00F3wek kolumny?) w pliku Excel (XLSX).
 xlsxfilereader.ioexception.failed=Nie uda\u0142o si\u0119 odczyta\u0107 wiersza nr {0} w drugim kroku analizy.
