--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2068,12 +2068,12 @@ ingest.csv.recordMismatch=Reading mismatch, line {0} of the Data file: {1} delim
 ingest.csv.nullStream=Stream can't be null.
 ingest.noPlugin=No ingest plugin found for file type {0}
 ingest.pluginRawFiles=this plugin does not support external raw data files.
-ingest.ioException=IO Exception occured while trying to open the file for reading.
+ingest.ioException=IO Exception occurred while trying to open the file for reading.
 ingest.statsOrSignaturesFailure=Ingest failed to produce Summary Statistics and/or UNF signatures; {0}
 ingest.dbFail=Failed to save the tabular file produced by the ingest.
 ingest.dbFailWithTabProduced=Ingest produced tabular data, but failed to save it in the database; {0} No further information is available.
 ingest.wrongHeader=reading failure: wrong headerId(Z) here
-ingest.unknownException=Unknown exception occured during ingest;
+ingest.unknownException=Unknown exception occurred during ingest.
 
 
 # editdatafile.xhtml
@@ -2641,6 +2641,7 @@ dataretrieverAPI.noMsgResultsFound=Sorry, no results were found.
 
 #xlsxfilereader.java
 xlsxfilereader.ioexception.parse=Could not parse Excel/XLSX spreadsheet. {0}
+xlsxfilereader.ioexception.numericParse=Failed to parse a value recognized as numeric in the first pass! column: {0}, value: {1}
 xlsxfilereader.ioexception.norows=No rows of data found in the Excel (XLSX) file.
 xlsxfilereader.ioexception.onlyonerow=Only one row of data (column name header?) detected in the Excel (XLSX) file.
 xlsxfilereader.ioexception.failed=Failed to read line {0} during the second pass.
