added missing bundle value.

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2052,6 +2052,8 @@ ingest.statsOrSignaturesFailure=Analiza pliku nie by\u0142a w stanie stworzy\u01
 ingest.dbFail=Nie uda\u0142o si\u0119 zapisa\u0107 pliku tabularycznego wyprodukowanego przez analiz\u0119.
 ingest.dbFailWithTabProduced=Analiza powiod\u0142a si\u0119, ale podczas zapisu do bazy danych wyst\u0105pi\u0142 b\u0142\u0105d; {0} Brak wi\u0119cej informacji.
 ingest.wrongHeader=b\u0142\u0105d czytania pliku: niepoprawny id nag\u0142\u00F3wka (Z)
+ingest.unknownException=Wyst\u0105pi\u0142 nieznany b\u0142\u0105d wyst\u0105pi\u0142 podczas analizy pliku.
+
 
 # editdatafile.xhtml
 
