changes according to pr.

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2071,9 +2071,9 @@ file.versionDifferences.fileUnrestricted=Unrestricted
 file.versionDifferences.fileGroupTitle=File
 
 # File Ingest
-ingest.error.INVALID_HEADER=Invalid header row. One of the cells is empty.
-ingest.error.LINE_MISMATCH=Mismatch between line counts in first and final passes!, {0} found on first pass, but {1} found on second.
-ingest.error.RECORD_MISMATCH=Reading mismatch, line {0} of the Data file: {1} delimited values expected, {2} found.
+ingest.error.CSV_INVALID_HEADER=Invalid header row. One of the cells is empty.
+ingest.error.CSV_LINE_MISMATCH=Mismatch between line counts in first and final passes!, {0} found on first pass, but {1} found on second.
+ingest.error.CSV_RECORD_MISMATCH=Reading mismatch, line {0} of the Data file: {1} delimited values expected, {2} found.
 ingest.error.NOPLUGIN=No ingest plugin found for file type {0}
 ingest.error.PLUGIN_RAW_FILES=this plugin does not support external raw data files.
 ingest.error.STATS_OR_SIGNATURE_FAILURE=Ingest failed to produce Summary Statistics and/or UNF signatures; {0}
@@ -2082,6 +2082,7 @@ ingest.error.DB_FAIL_WITH_TAB_PRODUCED=Ingest produced tabular data, but failed 
 ingest.error.WRONG_HEADER=reading failure: wrong headerId(Z) here
 ingest.error.UNZIP_FAIL=Failed to unzip the file.
 ingest.error.UNZIP_SIZE_FAIL=One of the unzipped files exceeds the size limit resorting to saving the file as is, unzipped.
+ingest.error.UNZIP_FILE_LIMIT_FAIL=The number of files in the zip archive is over the limit {0} please upload a zip archive with fewer files, if you want them to be deposited as individual data files.
 ingest.error.UNKNOWN_ERROR=Unknown error occurred during ingest.
 
 
@@ -2320,7 +2321,6 @@ dataset.file.uploadFailure=upload failure
 dataset.file.uploadFailure.detailmsg=the file {0} failed to upload!
 dataset.file.uploadWarning=upload warning
 dataset.file.uploadWorked=upload worked
-dataset.file.zip.uploadFilesLimit.exceeded=The number of files in the zip archive is over the limit {0} please upload a zip archive with fewer files, if you want them to be deposited as individual data files.
 dataset.file.zip.unpack.failure=Failed to unpack Zip file. (Unknown Character Set used in a file name?) Saving the file as is.
 dataset.file.zip.unzip.failure=Failed to unzip the file. Saving the file as is.
 dataset.file.zip.uploadFileSizeLimit.exceeded=One of the unzipped files exceeds the size limit resorting to saving the file as is, unzipped.
