--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2050,9 +2050,9 @@ file.versionDifferences.fileUnrestricted=Niezastrze\u017Cony
 file.versionDifferences.fileGroupTitle=Plik
 
 # File Ingest
-ingest.error.INVALID_HEADER=Niepoprawny wiersz nag\u0142\u00F3wka. Jedna z kom\u00F3rek jest pusta.
-ingest.error.LINE_MISMATCH=Niezgodno\u015B\u0107 liczby linii odnalezionych w pierwszym i ostatnim przebiegu. W pierwszym przebiegu odnaleziono {0} linii, a w ostatnim {1}.
-ingest.error.RECORD_MISMATCH=B\u0142\u0105d odczytu linii {0} w pliku danych: oczekiwano {1} oddzielonych warto\u015Bci, odnaleziono {2}.
+ingest.error.CSV_INVALID_HEADER=Niepoprawny wiersz nag\u0142\u00F3wka. Jedna z kom\u00F3rek jest pusta.
+ingest.error.CSV_LINE_MISMATCH=Niezgodno\u015B\u0107 liczby linii odnalezionych w pierwszym i ostatnim przebiegu. W pierwszym przebiegu odnaleziono {0} linii, a w ostatnim {1}.
+ingest.error.CSV_RECORD_MISMATCH=B\u0142\u0105d odczytu linii {0} w pliku danych: oczekiwano {1} oddzielonych warto\u015Bci, odnaleziono {2}.
 ingest.csv.nullStream=Strumie\u0144 nie mo\u017Ce by\u0107 nullem.
 ingest.PLUGIN_RAW_FILES=ten plugin nie obs\u0142uguje nieprzetworzone pliki danych.
 ingest.error.NOPLUGIN=Nie znaleziono pluginu do ingestowana dla typu pliku {0}
@@ -2294,7 +2294,7 @@ dataset.file.uploadFailure=przes\u0142anie si\u0119 nie powiod\u0142o
 dataset.file.uploadFailure.detailmsg=Nie uda\u0142o si\u0119 przes\u0142a\u0107 pliku {0}
 dataset.file.uploadWarning=b\u0142\u0105d przy przesy\u0142aniu
 dataset.file.uploadWorked=przesy\u0142anie zako\u0144czone powodzeniem
-dataset.file.zip.uploadFilesLimit.exceeded=Liczba plik\u00F3w w przesy\u0142anym archiwum przekracza limit {0} plik\u00F3w. Prze\u015Blij archiwum zip z mniejsz\u0105 liczb\u0105 plik\u00F3w je\u015Bli chcesz aby zosta\u0142y zdeponowane jako oddzielne dokumenty.
+ingest.error.UNZIP_FILE_LIMIT_FAIL=Liczba plik\u00F3w w przesy\u0142anym archiwum przekracza limit {0} plik\u00F3w. Prze\u015Blij archiwum zip z mniejsz\u0105 liczb\u0105 plik\u00F3w je\u015Bli chcesz aby zosta\u0142y zdeponowane jako oddzielne dokumenty.
 dataset.file.zip.unpack.failure=Nie uda\u0142o si\u0119 rozpakowa\u0107 archiwum zip (nieznany zestaw znak\u00F3w u\u017Cyty w nazwie pliku?). Plik zapisany w oryginalnym formacie.
 dataset.file.zip.unzip.failure=Nie uda\u0142o si\u0119 rozpakowa\u0107 archiwum zip. Plik zapisany w oryginalnym formacie.
 dataset.file.zip.uploadFileSizeLimit.exceeded=Co najmniej jeden z plik\u00F3w zawarty w archiwu zip po rozpakowaniu przekracza maksymaln\u0105 dozwolon\u0105 wielko\u015B\u0107. Archiwum nie zostanie rozpakowane.
