--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1235,10 +1235,10 @@ dataverse.manageGroups.tab.action.btn.delete.dialog.header=Delete Group
 dataverse.manageGroups.tab.action.btn.delete.dialog.tip=Are you sure you want to delete this group? You cannot undelete a group.
 dataverse.manageGroups.edit.dialog.header=Edit Group
 dataverse.manageGroups.edit.dialog.group=Group Name
-dataverse.manageGroups.edit.dialog.groupView.name=Member Name
-dataverse.manageGroups.edit.dialog.groupView.type=Member Type
-dataverse.manageGroups.edit.dialog.groupView.action=Action
-dataverse.manageGroups.edit.dialog.groupView.delete=Delete
+dataverse.manageGroups.edit.dialog.members.name=Member Name
+dataverse.manageGroups.edit.dialog.members.type=Member Type
+dataverse.manageGroups.edit.dialog.members.action=Action
+dataverse.manageGroups.edit.dialog.members.delete=Delete
 dataverse.manageGroups.edit.dialog.newGroupMembers=New Group Members
 dataverse.manageGroups.edit.dialog.enterName=Enter User/Group Name
 dataverse.manageGroups.edit.dialog.invalidMsg=No matches found.
