--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1593,9 +1593,12 @@ dataset.inValidSelectedFilesForDownload=Restricted Files Selected
 dataset.noValidSelectedFilesForDownload=The restricted file(s) selected may not be downloaded because you have not been granted access.
 dataset.mixedSelectedFilesForDownload=The restricted file(s) selected may not be downloaded because you have not been granted access.
 dataset.downloadUnrestricted=Click Continue to download the files you have access to download.
-dataset.requestAccessToRestrictedFiles=You may request access to the restricted file(s) by clicking the Request Access button. 
-dataset.privateurl.infoMessageAuthor=Dataset Private URL - Privately share this dataset before it is publicly available: {0}
+dataset.requestAccessToRestrictedFiles=You may request access to the restricted file(s) by clicking the Request Access button.
+dataset.privateurl.infoMessageAuthor.title=Dataset Private URL
+dataset.privateurl.infoMessageAuthor.details=Privately share this dataset before it is publicly available: {0}
 dataset.privateurl.infoMessageReviewer=Dataset Private URL - This dataset is being privately shared. You will not be able to access it when logged into your Dataverse account.
+dataset.privateurl.infoMessageReviewer.title=Dataset Private URL
+dataset.privateurl.infoMessageReviewer.details=This dataset is being privately shared. You will not be able to access it when logged into your Dataverse account.
 dataset.privateurl.header=Dataset Private URL
 dataset.privateurl.tip=Use a Private URL to allow those without Dataverse accounts to access your dataset. For more information about the Private URL feature, please refer to the <a href="{0}/{1}/user/dataset-management.html#private-url-for-reviewing-an-unpublished-dataset" title="Private URL for Reviewing Dataset - Dataverse User Guide" target="_blank">User Guide</a>.
 dataset.privateurl.absent=Private URL has not been created.
