--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1575,9 +1575,10 @@ dataset.inValidSelectedFilesForDownload=Wybrano zastrze\u017Cone pliki
 dataset.noValidSelectedFilesForDownload=Nie mo\u017Cna pobra\u0107 wybranych zastrze\u017Conych plik\u00F3w, poniewa\u017C nie przyznano Ci do nich dost\u0119pu.
 dataset.mixedSelectedFilesForDownload=Nie mo\u017Cna pobra\u0107 wybranych zastrze\u017Conych plik\u00F3w, poniewa\u017C nie przyznano Ci do nich dost\u0119pu.
 dataset.downloadUnrestricted=Naci\u015Bnij "Dalej" aby pobra\u0107 pliki, do pobrania kt\u00F3rych posiadasz odpowiednie uprawnienia.
-dataset.requestAccessToRestrictedFiles=Mo\u017Cesz poprosi\u0107 o dost\u0119p do zastrze\u017Conych plik\u00F3w klikaj\u0105c przycisk "Popro\u015B o dost\u0119p".
-dataset.privateurl.infoMessageAuthor=Prywatny URL zbioru danych. Udost\u0119pnij prywatnie ten zbi\u00F3r danych jeszcze zanim zostanie publicznie dost\u0119pny: {0}
-dataset.privateurl.infoMessageReviewer=Prywatny URL zbioru danych. Ten zbi\u00F3r danych jest udost\u0119pniany prywatnie. Nie b\u0119dziesz mie\u0107 do niego dost\u0119pu po zalogowaniu na konto w repozytorium.
+dataset.privateurl.infoMessageAuthor.title=Prywatny URL zbioru danych
+dataset.privateurl.infoMessageAuthor.details=Udost\u0119pnij prywatnie ten zbi\u00F3r danych jeszcze zanim zostanie publicznie dost\u0119pny: {0}
+dataset.privateurl.infoMessageReviewer.title=Prywatny URL zbioru danych
+dataset.privateurl.infoMessageReviewer.details=Ten zbi\u00F3r danych jest udost\u0119pniany prywatnie. Nie b\u0119dziesz mie\u0107 do niego dost\u0119pu po zalogowaniu na konto w repozytorium.
 dataset.privateurl.header=Prywatny URL zbioru danych
 dataset.privateurl.tip=Skorzystaj z prywatnego URL by osobom nieposiadaj\u0105cym konta w repozytorium umo\u017Cliwi\u0107 dost\u0119p do Twojego zbioru danych. Wi\u0119cej informacji na temat prywatnego URL mo\u017Cna znale\u017A\u0107 w <a href="{0}/{1}/user/dataset-management.html#private-url-for-reviewing-an-unpublished-dataset" title="Private URL for Reviewing Dataset - Dataverse User Guide" target="_blank">"Poradniku u\u017Cytkownika"</a>.
 dataset.privateurl.absent=Prywatny URL nie zosta\u0142 utworzony.
