--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1562,6 +1562,8 @@ dataset.message.createFailure=The dataset could not be created.
 dataset.message.termsFailure=The dataset terms could not be updated.
 dataset.message.guestbookFailure=The dataset guestbook could not be updated.
 dataset.message.publicInstall=File Access - Files are stored on a publicly accessible storage server.
+dataset.message.publicInstall.title=File Access
+dataset.message.publicInstall.details=Files are stored on a publicly accessible storage server.
 dataset.metadata.publicationDate=Publication Date
 dataset.metadata.publicationDate.tip=The publication date of a dataset.
 dataset.metadata.publicationYear=Publication Year
@@ -2791,7 +2793,8 @@ dashboard.card.datamove=Data
 dashboard.card.datamove.manage=Move data
 dashboard.datamove.empty.fields=All fields are required.
 dashboard.datamove.header=Dasboard - Move data
-dashboard.datamove.message=Manage data in your repository by moving datasets and dataverses from one host dataverse to another. See also <a href={0}/{1}/admin/dataverses-datasets.html>Managing Datasets and Dataverses</a> in the Admin Guide.
+dashboard.datamove.message.title=Move data
+dashboard.datamove.message.details=Manage data in your repository by moving datasets and dataverses from one host dataverse to another. See also <a href={0}/{1}/admin/dataverses-datasets.html>Managing Datasets and Dataverses</a> in the Admin Guide.
 dashboard.datamove.selectdataset.header=Dataset to Move
 dashboard.datamove.newdataverse.header=New Host Dataverse
 dashboard.datamove.dataset.label=Dataset
