--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1544,6 +1544,8 @@ dataset.message.deaccessionFailure=Nie uda\u0142o si\u0119 wycofa\u0107 tego zbi
 dataset.message.createFailure=Nie uda\u0142o si\u0119 utworzy\u0107 tego zbioru danych.
 dataset.message.termsFailure=Nie uda\u0142o si\u0119 zaktualizowa\u0107 warunk\u00F3w korzystania ze zbioru danych.
 dataset.message.publicInstall=Dost\u0119p do plik\u00F3w - Pliki s\u0105 przechowywane na publicznie dost\u0119pnym serwerze pami\u0119ci masowej.
+dataset.message.publicInstall.title=Dost\u0119p do plik\u00F3w
+dataset.message.publicInstall.details=Pliki s\u0105 przechowywane na publicznie dost\u0119pnym serwerze pami\u0119ci masowej.
 dataset.metadata.publicationDate=Data publikacji
 dataset.metadata.publicationDate.tip=Data publikacji zbioru danych
 dataset.metadata.publicationYear=Rok publikacji
@@ -2740,7 +2742,8 @@ dashboard.card.datamove=Dane
 dashboard.card.datamove.manage=Przenie\u015B dane
 dashboard.datamove.empty.fields=Wszystkie pola s\u0105 wymagane.
 dashboard.datamove.header=Panel administratora - Przenie\u015B dane
-dashboard.datamove.message=Zarz\u0105dzaj danymi w repozytorium przenosz\u0105c zbiory i kolekcje do innych kolekcji. Odwied\u017A r\u00F3wnie\u017C sekcj\u0119 <a href={0}/{1}/admin/dataverses-datasets.html>Zarz\u0105dzanie zbiorami danych i kolekcjami</a> w "Podr\u0119czniku administratora".
+dashboard.datamove.message.title=Przenie\u015B dane
+dashboard.datamove.message.details=Zarz\u0105dzaj danymi w repozytorium przenosz\u0105c zbiory i kolekcje do innych kolekcji. Odwied\u017A r\u00F3wnie\u017C sekcj\u0119 <a href={0}/{1}/admin/dataverses-datasets.html>Zarz\u0105dzanie zbiorami danych i kolekcjami</a> w "Podr\u0119czniku administratora".
 dashboard.datamove.button.move=Przenie\u015B zbi\u00F3r danych
 dashboard.datamove.selectdataset.header=Przenoszony zbi\u00F3r danych
 dashboard.datamove.newdataverse.header=Nowa kolekcja nadrz\u0119dna
