Closes #1172: Display results of automatic analysis with XDS

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1898,6 +1898,13 @@ file.dataFilesTab.versions.description.beAccessedAt=Zbi\u00F3r danych jest teraz
 file.dataFilesTab.versions.description.noDiffWithPrev=Brak r\u00F3\u017Cnic w stosunku do poprzedniej wersji.
 file.dataFilesTab.versions.viewDetails.btn=Wy\u015Bwietl szczeg\u00F3\u0142y
 file.dataFilesTab.versions.widget.viewMoreInfo=By wy\u015Bwietli\u0107 wi\u0119cej informacji dotycz\u0105cych r\u00F3\u017Cnych wersji tego zbioru danych, odwied\u017A <a href="/dataset.xhtml?persistentId={0}" title="{1}" target="_blank">pe\u0142n\u0105 wersj\u0119 tego zbioru danych</a> na {2}. Je\u015Bli jest to Tw\u00F3j zbi\u00F3r danych, mo\u017Cesz go r\u00F3wnie\u017C edytowa\u0107.
+
+file.dataFilesTab.analysisResults=Analiza automatyczna
+file.dataFilesTab.analysisResults.header.field=Pole
+file.dataFilesTab.analysisResults.header.inMetadata=W metadanych
+file.dataFilesTab.analysisResults.header.inAnalysis=W analizie automatycznej
+
+
 file.deleteDialog.tip=Czy na pewno chcesz usun\u0105\u0107 ten zbi\u00F3r danych? Tej czynno\u015Bci nie mo\u017Cna cofn\u0105\u0107.
 file.deleteDialog.header=Usu\u0144 zbi\u00F3r danych
 file.deleteDraftDialog.tip=Czy na pewno chcesz usun\u0105\u0107 t\u0119 wersj\u0119 robocz\u0105? Tej czynno\u015Bci nie mo\u017Cna cofn\u0105\u0107.
