--- a/dataverse-webapp/src/main/resources/socialscience_en.properties
+++ b/dataverse-webapp/src/main/resources/socialscience_en.properties
@@ -48,7 +48,7 @@ datasetfieldtype.cleaningOperations.title=Cleaning Operations
 datasetfieldtype.datasetLevelErrorNotes.title=Study Level Error Notes
 datasetfieldtype.responseRate.title=Response Rate
 datasetfieldtype.samplingErrorEstimates.title=Estimates of Sampling Error
-datasetfieldtype.otherDataAppraisal.title=otherDataAppraisal
+datasetfieldtype.otherDataAppraisal.title=Other Forms of Data Appraisal
 datasetfieldtype.socialScienceNotes.title=Notes
 datasetfieldtype.socialScienceNotesType.title=Type
 datasetfieldtype.socialScienceNotesType.withParent.title=Note Type
