--- a/dataverse-webapp/src/main/resources/socialscience_en.properties
+++ b/dataverse-webapp/src/main/resources/socialscience_en.properties
@@ -43,7 +43,7 @@ datasetfieldtype.interviewsBackcheck.title=Interviews' Back-Check
 datasetfieldtype.interviewsBackcheckPercentage.title=Percentage of Interviews
 datasetfieldtype.interviewsBackcheckPercentage.withParent.title=Percentage of Back-Checked Interviews
 datasetfieldtype.interviewsBackcheckProcedureDescription.title=Back-Check Procedure Description
-datasetfieldtype.interviewsBackcheckProcedureDescription.withParent.title=Descritpion of Back-Check Procedure
+datasetfieldtype.interviewsBackcheckProcedureDescription.withParent.title=Description of Back-Check Procedure
 datasetfieldtype.cleaningOperations.title=Cleaning Operations
 datasetfieldtype.datasetLevelErrorNotes.title=Study Level Error Notes
 datasetfieldtype.responseRate.title=Response Rate
@@ -70,7 +70,7 @@ datasetfieldtype.targetSampleSize.description=Specific information regarding the
 datasetfieldtype.targetSampleActualSize.description=Target sample size.
 datasetfieldtype.targetSampleSizeAchieved.description=Achieved sample size. 
 datasetfieldtype.deviationsFromSampleDesign.description=Indicate deviations in statistics between the sample and the population (regarding age, sex, marital status etc.)
-datasetfieldtype.substitutionOfRespondents.description=Infromation regarding the substitution of respondents. 
+datasetfieldtype.substitutionOfRespondents.description=Information regarding the substitution of respondents. 
 datasetfieldtype.substitutionOfRespondentsAcceptability.description=Acceptability of substitution of respondents. 
 datasetfieldtype.substitutionOfRespondentsDescription.description=A detailed description of the substitution of respondents, especially when using reserved sample. 
 datasetfieldtype.ageCutOff.description=Information regarding age cut-off in the sample. 
@@ -86,7 +86,7 @@ datasetfieldtype.dataCollectionSituation.description=Description of the context 
 datasetfieldtype.weighting.description=Select type of weight applied to produce accurate statistical results.
 datasetfieldtype.actionsToMinimizeLoss.description=Summary of actions taken to minimize data loss. Include information on actions such as follow-up visits, supervisory checks, historical matching, estimation, and so on.
 datasetfieldtype.controlOperations.description=Methods to facilitate data control performed by the primary investigator or by the data archive.
-datasetfieldtype.interviewsBackcheck.description=Description of back-check control of completed interviews with respect to the fact and correctnes of their fulfillment, eg. by coordinator.  
+datasetfieldtype.interviewsBackcheck.description=Description of back-check control of completed interviews with respect to the fact and correctness of their fulfillment, eg. by coordinator.  
 datasetfieldtype.interviewsBackcheckPercentage.description=Approximate percentage of back-checked interviews.
 datasetfieldtype.interviewsBackcheckProcedureDescription.description=A detailed description of back-check procedure.
 datasetfieldtype.cleaningOperations.description=Description of data cleaning and logical control procedures
