--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1744,6 +1744,9 @@ file.unrestrict=Unrestrict
 file.restricted.success=Files "{0}" will be restricted once you click on the Save Changes button.
 file.download.header=Download
 file.download.subset.header=Download Data Subset
+file.download.dataset=Download Dataset
+file.download.dataset.original=Download original dataset files
+file.download.dataset.tab=Download tabular dataset files
 file.preview=Preview:
 file.previewMap=Preview Map:o
 file.fileName=File Name
