--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1726,8 +1726,8 @@ file.restricted.success=Pliki \u201D{0}\u201D zostan\u0105 zastrze\u017Cone po n
 file.download.header=Pobierz
 file.download.subset.header=Pobierz podzbi\u00F3r danych
 file.download.dataset=Pobierz Zbi\u00F3r danych
-file.download.dataset.original=Pobierz oryginalny zbi\u00F3r danych
-file.download.dataset.tab=Pobierz tabularyczny zbi\u00F3r danych
+file.download.dataset.original=Format pierwotny
+file.download.dataset.tab=Format archiwalny (.tab)
 file.preview=Podgl\u0105d:
 file.previewMap=Podgl\u0105d mapy:
 file.fileName=Nazwa pliku
