--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1745,8 +1745,8 @@ file.restricted.success=Files "{0}" will be restricted once you click on the Sav
 file.download.header=Download
 file.download.subset.header=Download Data Subset
 file.download.dataset=Download Dataset
-file.download.dataset.original=Download original dataset files
-file.download.dataset.tab=Download tabular dataset files
+file.download.dataset.original=Original Format
+file.download.dataset.tab=Archival Format (.tab)
 file.preview=Preview:
 file.previewMap=Preview Map:o
 file.fileName=File Name
