--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2928,6 +2928,7 @@ metadata.import.upload.successful=File {0} uploaded successfully.
 
 # Citation constants
 citation.constants.data=data
+citation.constants.file.name=file name
 citation.constants.producer=producer
 citation.constants.distributor=distributor
 citation.constants.publisher=publisher
