--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2878,6 +2878,7 @@ metadata.import.upload.successful=Za\u0142adowano pomy\u015Blnie plik {0}.
 
 # Citation constants
 citation.constants.data=dane
+citation.constants.file.name=nazwa pliku
 citation.constants.producer=producent
 citation.constants.distributor=dystrybutor
 citation.constants.publisher=wydawca
