--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -229,7 +229,7 @@ contact.msg=Wiadomo\u015B\u0107
 contact.msg.required=Tre\u015B\u0107 wiadomo\u015Bci jest wymagana.
 contact.send=Wy\u015Blij wiadomo\u015B\u0107
 contact.send.success=Wiadomo\u015B\u0107 zosta\u0142a wys\u0142ana.
-contact.send.failure=The message has been sent.
+contact.send.failure=Wiadomo\u015B\u0107 nie zosta\u0142a wys\u0142ana. 
 contact.question=Wype\u0142nij to pole, by udowodni\u0107, \u017Ce nie jeste\u015B robotem. 
 contact.sum.required=Warto\u015B\u0107 jest wymagana.
 contact.sum.invalid=Suma jest b\u0142\u0119dna. Spr\u00F3buj ponownie.
