Closes #1638: Restrict users with unconfirmed email

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2936,3 +2936,8 @@ citation.constants.publisher=publisher
 
 # Search Results
 result.harvested.description=This Dataset is harvested from our partners. Clicking the link will take you directly to the archival source of the data.
+
+# Unconfirmed mail
+unconfirmed.mail.banner.text=Your e-mail has not been confirmed yet. Some of the features are disabled.
+unconfirmed.mail.banner.button.close.text=Close
+unconfirmed.mail.restricted.access.dialog.text=User with unconfirmed e-mail cannot request access to restricted files.
