--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2886,3 +2886,8 @@ citation.constants.publisher=wydawca
 
 # Search Results
 result.harvested.description=Ten zbi\u00F3r danych jest harwestowany od naszych partner\u00F3w. Klikni\u0119cie na link przekieruje Ci\u0119 bezpo\u015Brednio do pierwotnego \u017Ar\u00F3d\u0142a tych danych.
+
+# Unconfirmed mail
+unconfirmed.mail.banner.text=Tw\u00F3j e-mail nie zosta\u0142 jak dot\u0105d potwierdzony. Cz\u0119\u015B\u0107 funkcjonalno\u015Bci zosta\u0142a zablokowana.
+unconfirmed.mail.banner.button.close.text=Zamknij
+unconfirmed.mail.restricted.access.dialog.text=U\u017Cytkownik bez potwierdzonego adresu e-mail nie mo\u017Ce wnioskowa\u0107 o udost\u0119pnienie zastrze\u017Conego pliku.
