--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2938,6 +2938,8 @@ citation.constants.publisher=publisher
 result.harvested.description=This Dataset is harvested from our partners. Clicking the link will take you directly to the archival source of the data.
 
 # Unconfirmed mail
-unconfirmed.mail.banner.text=Your e-mail has not been confirmed yet. Some of the features are disabled.
+unconfirmed.mail.banner.text=The e-mail assigned to your repository account has not been confirmed yet. Some features, e.g. creating and editing datasets, are not available to you. Please confirm your e-mail. To check if you can resend a confirmation email,
+unconfirmed.mail.banner.link.text=go to the user account management page
 unconfirmed.mail.banner.button.close.text=Close
-unconfirmed.mail.restricted.access.dialog.text=User with unconfirmed e-mail cannot request access to restricted files.
+unconfirmed.mail.restricted.access.dialog.text=The e-mail assigned to your repository account has not been confirmed yet. You cannot request access to a restricted file. Please confirm your e-mail. To check if you can resend a confirmation email,
+unconfirmed.mail.restricted.access.dialog.link.text=go to the user account management page
