--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2888,6 +2888,8 @@ citation.constants.publisher=wydawca
 result.harvested.description=Ten zbi\u00F3r danych jest harwestowany od naszych partner\u00F3w. Klikni\u0119cie na link przekieruje Ci\u0119 bezpo\u015Brednio do pierwotnego \u017Ar\u00F3d\u0142a tych danych.
 
 # Unconfirmed mail
-unconfirmed.mail.banner.text=Tw\u00F3j e-mail nie zosta\u0142 jak dot\u0105d potwierdzony. Cz\u0119\u015B\u0107 funkcjonalno\u015Bci zosta\u0142a zablokowana.
+unconfirmed.mail.banner.text=E-mail przypisany do Twojego konta w repozytorium nie zosta\u0142 jeszcze potwiedzony. Niekt\u00F3re funkcjonalno\u015Bci, np. tworzenie i edycja zbior\u00F3w danych, s\u0105 dla Ciebie niedost\u0119pne. Prosimy, potwierd\u017A sw\u00F3j adres e-mail. Aby sprawdzi\u0107, czy mo\u017Cesz ponownie wys\u0142a\u0107 wiadomo\u015B\u0107 umo\u017Cliwiaj\u0105c\u0105 potwierdzenie adresu e-mail,
+unconfirmed.mail.banner.link.text=przejd\u017A do strony zarz\u0105dzania kontem u\u017Cytkownika
 unconfirmed.mail.banner.button.close.text=Zamknij
-unconfirmed.mail.restricted.access.dialog.text=U\u017Cytkownik bez potwierdzonego adresu e-mail nie mo\u017Ce wnioskowa\u0107 o udost\u0119pnienie zastrze\u017Conego pliku.
+unconfirmed.mail.restricted.access.dialog.text=E-mail przypisany do Twojego konta w repozytorium nie zosta\u0142 jeszcze potwiedzony. Nie mo\u017Cesz wystosowa\u0107 pro\u015Bby o udost\u0119pnienie pliku, do kt\u00F3rego dost\u0119p zosta\u0142 ograniczony. Prosimy, potwierd\u017A sw\u00F3j adres e-mail. Aby sprawdzi\u0107, czy mo\u017Cesz ponownie wys\u0142a\u0107 wiadomo\u015B\u0107 umo\u017Cliwiaj\u0105c\u0105 potwierdzenie adresu e-mail,
+unconfirmed.mail.restricted.access.dialog.link.text=przejd\u017A do strony zarz\u0105dzania kontem u\u017Cytkownika
