fixed other terms tab

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -528,7 +528,7 @@ dashboard.license.newLicense.url=URL
 dashboard.license.reorderButton=Zmie\u0144 kolejno\u015B\u0107 licencji
 dashboard.license.localePreviewButton=Wy\u015Bwietl wersje j\u0119zykowe licencji
 dashboard.license.editLicenseButton=Edytuj licencj\u0119
-dashboard.otherTermsOfUse.header=Pozosta\u0142e licencje
+dashboard.otherTermsOfUse.header=Inne warunki
 #dasboard-licenses-reorder.xhtml
 license.reorder.pageTitle=Zmiana kolejno\u015Bci licencji
 license.reorder.header=Zmiana kolejno\u015Bci
