--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -548,7 +548,7 @@ dashboard.license.newLicense.url=URL
 dashboard.license.reorderButton=Reorder licenses
 dashboard.license.localePreviewButton=Show license localized names
 dashboard.license.editLicenseButton=Edit license
-dashboard.otherTermsOfUse.header=Other Terms Of Use
+dashboard.otherTermsOfUse.header=Other terms
 #dashboard-licenses-reorder.xhtml
 license.reorder.pageTitle=License reorder
 license.reorder.header=Reorder
