changed column name

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -537,7 +537,7 @@ dashboard.license.displayOrder=Display order
 dashboard.license.universalLicenseName=Universal license name
 dashboard.license.licenseURL=License URL
 dashboard.license.badge=Badge
-dashboard.license.activeByDefault=Active by default
+dashboard.license.active=Active
 dashboard.license.action=Action
 dashboard.license.missingTextField=This field must not be empty
 dashboard.license.invalidURL=This is not a valid URL
