--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -518,7 +518,7 @@ dashboard.license.universalLicenseName=Uniwersalna nazwa licencji
 dashboard.license.licenseURL=URL licencji
 dashboard.license.badge=Znaczek
 dashboard.license.action=Dzia\u0142anie
-dashboard.license.activeByDefault=Domy\u015Blnie aktywna
+dashboard.license.active=Aktywna
 dashboard.license.missingTextField=To pole nie mo\u017Ce by\u0107 puste
 dashboard.license.invalidURL=Wprowadzono niepoprawny URL
 dashboard.license.newLicense.add=Dodaj now\u0105 licencj\u0119
