--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2685,7 +2685,9 @@ ingest.error.EXCEL_ONLY_ONE_ROW=Wykryto tylko jeden wiersz z danymi (nag\u0142\u
 ingest.error.EXCEL_READ_FAIL=Nie uda\u0142o si\u0119 odczyta\u0107 wiersza nr {0} w drugim kroku analizy.
 ingest.error.EXCEL_MISMATCH=B\u0142\u0105d odczytu w drugim kroku analizy w wierszu nr {0}: oczekiwano {1} warto\u015Bci, znaleziono {2}.
 ingest.error.EXCEL_LINE_COUNT=Niezgodno\u015B\u0107 pomi\u0119dzy liczb\u0105 wierszy w pierwszym i ostatnim kroku analizy.
-
+ingest.error.EXCEL_AMBIGUOUS_INDEX_POSITION=Nie mo\u017Cna wyznaczy\u0107 jednoznacznie indeksu kom\u00F3rki.
+ingest.error.EXCEL_UNKNOWN_VARIABLE_NAME=Nie mo\u017Cna ustali\u0107 nazwy zmiennej dla kolumny {0}.
+ingest.error.EXCEL_UNKNOWN_OR_INVALID_COLUMN_COUNT=Nie mo\u017Cna ustali\u0107 liczby kolumn lub jest ona niepoprawna.
 #rtabfileparser.java
 ingest.error.RTAB_FAIL=Nie uda\u0142o si\u0119 odczyta\u0107 wiersza {0} pliku danych 
 ingest.error.RTAB_MISMATCH=B\u0142\u0105d odczytu wiersza nr {0} pliku: oczekiwano {1} warto\u015Bci, znaleziono {2}.
