Closes #1899: Update bundle

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2678,7 +2678,7 @@ passwdVal.passwdReq.special=znak specjalny
 dataretrieverAPI.noMsgResultsFound=Przepraszamy, nie znaleziono \u017Cadnych wynik\u00F3w.
 
 #xlsxfilereader.java
-ingest.error.EXCEL_PARSE=Nie uda\u0142o si\u0119 przeprowadzi\u0107 analizy arkuszy Excel/XLSX ,{0}
+ingest.error.EXCEL_PARSE=Nie uda\u0142o si\u0119 przeprowadzi\u0107 analizy arkuszy Excel/XLSX.
 ingest.error.EXCEL_NUMERIC_PARSE=Nie uda\u0142o si\u0119 odczyta\u0107 warto\u015Bci numerycznej po pierwszej pr\u00F3bie! kolumna: {0}, wartos\u0107: {1}
 ingest.error.EXCEL_NO_ROWS=Nie znaleziono \u017Cadnych wierszy z danymi w pliku Excel (XLSX).
 ingest.error.EXCEL_ONLY_ONE_ROW=Wykryto tylko jeden wiersz z danymi (nag\u0142\u00F3wek kolumny?) w pliku Excel (XLSX).
