--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2727,7 +2727,7 @@ passwdVal.passwdReq.special=special
 dataretrieverAPI.noMsgResultsFound=Sorry, no results were found.
 
 #xlsxfilereader.java
-ingest.error.EXCEL_PARSE=Could not parse Excel/XLSX spreadsheet. {0}
+ingest.error.EXCEL_PARSE=Could not parse Excel/XLSX spreadsheet.
 ingest.error.EXCEL_NUMERIC_PARSE=Failed to parse a value recognized as numeric in the first pass! column: {0}, value: {1}
 ingest.error.EXCEL_NO_ROWS=No rows of data found in the Excel (XLSX) file.
 ingest.error.EXCEL_ONLY_ONE_ROW=Only one row of data (column name header?) detected in the Excel (XLSX) file.
