--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2950,6 +2950,7 @@ metadata.import.result.error=Error encountered during metadata import. Precise i
 metadata.import.result.not.matched=Found no matching metadata field or the field has invalid parent. The value will not be imported. 
 metadata.import.vocabulary.value.not.matched=Found no matching vocabulary entry. The value will not be imported.
 metadata.import.upload.successful=File {0} uploaded successfully.
+metadata.import.upload.exceeds.max.size=File {0} ({1}) exceeds maximal allowed size for uploaded files ({2}).
 
 # Citation constants
 citation.constants.data=data
