Closes #2167: Make IdP-filled fields uneditable

--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2983,3 +2983,9 @@ dataset.metadata.inputRenderer.suggestion.ror.otherNames=Other names
 
 ror.invalid.format={0} is wrongly formed.
 ror.invalid.checksum={0} is invalid.
+
+failed.login.title=Login failed
+failed.login.cause.invalid.data=Invalid data
+failed.login.cause.incomplete.data=Incomplete data
+failed.login.cause.duplicated.email=Duplicated email
+failed.login.cause.authentication.error=Authentication error
