--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2932,3 +2932,9 @@ dataset.metadata.inputRenderer.suggestion.ror.otherNames=Inne nazwy
 
 ror.invalid.format=Pole "{0}" nie zawiera poprawnie zbudowanego identyfikatora ROR.
 ror.invalid.checksum=Pole "{0}" nie zawiera prawid\u0142owego identyfikatora ROR.
+
+failed.login.title=Logowanie nieudane
+failed.login.cause.invalid.data=Invalid data
+failed.login.cause.incomplete.data=Incomplete data
+failed.login.cause.duplicated.email=Duplicated email
+failed.login.cause.authentication.error=Authentication error
