Closes #2169: support for account conversion

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -425,18 +425,23 @@ confirmEmail.notVerified=Niezweryfikowany
 confirmEmail.verified=Zweryfikowany
 
 #shib.xhtml
-shib.btn.convertAccount=Przekszta\u0142\u0107 konto
 shib.btn.createAccount=Utw\u00F3rz konto
-shib.askToConvert=Czy chcesz przekszta\u0142ci\u0107 swoje konto w repozytorium i zawsze logowa\u0107 si\u0119 za pomoc\u0105 loginu instytucjonalnego?
 # Bundle file editors, please note that "shib.welcomeExistingUserMessage" is used in a unit test
 shib.welcomeExistingUserMessage=Tw\u00F3j instytucjonalny login do {0} odpowiada adresowi e-mail jednego z kont w repozytorium. Wprowadzaj\u0105c poni\u017Cej swoje aktualne has\u0142o do konta w repozytorium, mo\u017Cesz je przekszta\u0142ci\u0107 i u\u017Cywa\u0107 loginu instytucjonalnego. Po przekszta\u0142ceniu konta, logowanie b\u0119dzie mo\u017Cliwe jedynie za pomoc\u0105 autoryzacji instytucjonalnej.
 # Bundle file editors, please note that "shib.welcomeExistingUserMessageDefaultInstitution" is used in a unit test
 shib.welcomeExistingUserMessageDefaultInstitution=twoja instytucja
-shib.dataverseUsername=Nazwa u\u017Cytkownika repozytorium
-shib.currentDataversePassword=Aktualne has\u0142o do konta w repozytorium
 shib.accountInformation=Moje konto
 shib.offerToCreateNewAccount=Te informacje s\u0105 dostarczane przez Twoj\u0105 instytucj\u0119 i zostan\u0105 wykorzystane do stworzenia Twojego konta w repozytorium.
-shib.passwordRejected=<strong>B\u0142\u0105d walidacji</strong> - Twoje konto mo\u017Ce zosta\u0107 przekszta\u0142cone tylko je\u015Bli wprowadzisz poprawne has\u0142o do swojego istniej\u0105cego konta.
+
+saml.convert.btn.convertAccount=Przekszta\u0142\u0107 konto
+saml.convert.title=Przekszta\u0142\u0107 konto
+saml.convert.askToConvert=Czy chcesz przekszta\u0142ci\u0107 swoje konto w repozytorium i zawsze logowa\u0107 si\u0119 za pomoc\u0105 loginu instytucjonalnego?
+saml.convert.welcomeExistingUserMessage=Dane twojego instytucjonalnego loginu zawieraj\u0105 adres e-mail jednego z kont w repozytorium. Wprowadzaj\u0105c poni\u017Cej swoje aktualne has\u0142o do konta w repozytorium, mo\u017Cesz je przekszta\u0142ci\u0107 i u\u017Cywa\u0107 loginu instytucjonalnego. Po przekszta\u0142ceniu konta, logowanie b\u0119dzie mo\u017Cliwe jedynie za pomoc\u0105 autoryzacji instytucjonalnej.
+saml.convert.passwordRejected=<strong>B\u0142\u0105d walidacji</strong> - Twoje konto mo\u017Ce zosta\u0107 przekszta\u0142cone tylko je\u015Bli wprowadzisz poprawne has\u0142o do swojego istniej\u0105cego konta.
+saml.convert.dataverseUsername=Nazwa u\u017Cytkownika repozytorium
+saml.convert.currentDataversePassword=Aktualne has\u0142o do konta w repozytorium
+saml.convert.success=Twoje konto zostalo powi\u0105zane z kontem instytucjonalnym.
+saml.convert.failed=Nie uda\u0142o si\u0119 powi\u0105za\u0107 twojego konta z kontem instytucjonalnym.
 
 # firstLogin.xhtml
 external.btn.convertAccount=Przekszta\u0142\u0107 istniej\u0105ce konto
