--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -445,18 +445,23 @@ confirmEmail.notVerified=Not Verified
 confirmEmail.verified=Verified
 
 #shib.xhtml
-shib.btn.convertAccount=Convert Account
 shib.btn.createAccount=Create Account
-shib.askToConvert=Would you like to convert your Dataverse account to always use your institutional log in?
 # Bundle file editors, please note that "shib.welcomeExistingUserMessage" is used in a unit test
 shib.welcomeExistingUserMessage=Your institutional log in for {0} matches an email address already being used for a Dataverse account. By entering your current Dataverse password below, your existing Dataverse account can be converted to use your institutional log in. After converting, you will only need to use your institutional log in.
 # Bundle file editors, please note that "shib.welcomeExistingUserMessageDefaultInstitution" is used in a unit test
 shib.welcomeExistingUserMessageDefaultInstitution=your institution
-shib.dataverseUsername=Dataverse Username
-shib.currentDataversePassword=Current Dataverse Password
 shib.accountInformation=Account Information
 shib.offerToCreateNewAccount=This information is provided by your institution and will be used to create your Dataverse account.
-shib.passwordRejected=<strong>Validation Error</strong> - Your account can only be converted if you provide the correct password for your existing account.
+
+saml.convert.btn.convertAccount=Convert Account
+saml.convert.title=Convert Account
+saml.convert.askToConvert=Would you like to convert your Dataverse account to always use your institutional log in?
+saml.convert.welcomeExistingUserMessage=Your institutional log in matches an email address already being used for a Dataverse account. By entering your current Dataverse password below, your existing Dataverse account can be converted to use your institutional log in. After converting, you will only need to use your institutional log in.
+saml.convert.passwordRejected=<strong>Validation Error</strong> - Your account can only be converted if you provide the correct password for your existing account.
+saml.convert.dataverseUsername=Dataverse Username
+saml.convert.currentDataversePassword=Current Dataverse Password
+saml.convert.success=Your Dataverse account is now associated with your institutional account.
+saml.convert.failed=Cannot convert your Dataverse account to institutional account.
 
 # firstLogin.xhtml
 external.btn.convertAccount=Convert Existing Account
