--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -2990,7 +2990,7 @@ ror.invalid.format={0} is wrongly formed.
 ror.invalid.checksum={0} is invalid.
 
 failed.login.title=Login failed
-failed.login.cause.invalid.data=Invalid data
-failed.login.cause.incomplete.data=Incomplete data
-failed.login.cause.duplicated.email=Duplicated email
-failed.login.cause.authentication.error=Authentication error
+failed.login.cause.invalid.data=The data provided by your institution are invalid.
+failed.login.cause.incomplete.data=The data provided by your institution are incomplete.
+failed.login.cause.duplicated.email=Your email address provided by your institution matches the email address of another account in the repository. Please contact repository support to merge both accounts.
+failed.login.cause.authentication.error=Authentication error. If the problem persists, please contact repository support.
