Closes #2182: DDI Codebook to Html

--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -1411,6 +1411,8 @@ dataset.exportBtn.itemLabel.datacite=DataCite
 dataset.exportBtn.itemLabel.json=JSON
 dataset.exportBtn.itemLabel.oai_ore=OAI_ORE
 dataset.exportBtn.itemLabel.dataciteOpenAIRE=OpenAIRE
+dataset.exportBtn.itemLabel.ddi.html=DDI Html Codebook
+dataset.export.error=W trakcie eksportu wyst\u0105pi\u0142 b\u0142\u0105d.
 dataset.files.license=Licencja
 dataset.files.license.description=Licencja przypisana do wszystkich plik\u00F3w w zbiorze danych.
 dataset.files.license.multiple=R\u00F3\u017Cne licencje dla poszczeg\u00F3lnych plik\u00F3w
