--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -1428,6 +1428,8 @@ dataset.exportBtn.itemLabel.datacite=DataCite
 dataset.exportBtn.itemLabel.json=JSON
 dataset.exportBtn.itemLabel.oai_ore=OAI_ORE
 dataset.exportBtn.itemLabel.dataciteOpenAIRE=OpenAIRE
+dataset.exportBtn.itemLabel.ddi.html=DDI Html Codebook
+dataset.export.error=Error encountered during dataset export.
 dataset.files.license=License
 dataset.files.license.description=License assigned for all files included in this Dataset.
 dataset.files.license.multiple=Different licenses for individual files
