--- a/dataverse-persistence/src/main/resources/Bundle_pl.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_pl.properties
@@ -2987,7 +2987,7 @@ failed.login.cause.duplicated.email=Tw\u00F3j adres e-mail przekazany przez Twoj
 failed.login.cause.authentication.error=Wyst\u0105pi\u0142 b\u0142\u0105d autoryzacji. Je\u015Bli problem b\u0119dzie si\u0119 powtarza\u0142, skontaktuj si\u0119 z pomoc\u0105 repozytorium.
 
 uningest.page.title=Cofnij analiz\u0119
-uningest.page.info=<strong>Cofnij analiz\u0119 pliku</strong> - przywr\u00F3\u0107 plik do jego pierwotnej postaci i usu\u0144 jego wyekstrahowane metadane. Cofni\u0119cie analizy jest mo\u017cliwe jedynie w przypadku plik\u00F3w w originalnych formatach xlsx, csv oraz tsv, które nie zosta\u0142y jak dot\u0105d opublikowane w \u017cadnej wersji zbioru danych.
+uningest.page.info=<strong>Cofnij analiz\u0119 pliku</strong> \u2013 przywr\u00F3\u0107 plik do jego pierwotnej postaci i usu\u0144 jego wyekstrahowane metadane. Cofni\u0119cie analizy jest mo\u017cliwe jedynie w przypadku plik\u00F3w w originalnych formatach xlsx, csv oraz tsv, które nie zosta\u0142y jak dot\u0105d opublikowane w \u017cadnej wersji zbioru danych.
 uningest.table.filename=Nazwa pliku
 uningest.table.originalFormat=Format oryginalny
 uningest.table.md5=MD5 oryginalnego pliku
