--- a/dataverse-persistence/src/main/resources/Bundle_en.properties
+++ b/dataverse-persistence/src/main/resources/Bundle_en.properties
@@ -3036,7 +3036,7 @@ failed.login.cause.duplicated.email=Your email address provided by your institut
 failed.login.cause.authentication.error=Authentication error. If the problem persists, please contact repository support.
 
 uningest.page.title=Uningest
-uningest.page.info=<strong>Uningest file</strong> - restore a file to its original form and remove its extracted metadata. Uningest is only possible for files in xlsx, csv and tsv original formats, which have not yet been published in any version of the dataset.
+uningest.page.info=<strong>Uningest file</strong> \u2013 restore a file to its original form and remove its extracted metadata. Uningest is only possible for files in xlsx, csv and tsv original formats, which have not yet been published in any version of the dataset.
 uningest.table.filename=File name
 uningest.table.originalFormat=Original format
 uningest.table.md5=MD5 of the original file
